# saxoflow-agenticai

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: __init__.py  server.py
input/spec/: alu_spec.md
output/formal/: alu_spec_props_gen.sv
output/report/: alu_spec_pipeline_report.txt
output/rtl/: alu_spec_gen.v
output/tb/: alu_spec_tb_gen.sv
saxoflow_agenticai/: cli.py
saxoflow_agenticai/agents/generators/: fprop_gen.py  report_agent.py  rtl_gen.py  tb_gen.py
saxoflow_agenticai/agents/reviewers/: debug_agent.py  fprop_review.py  rtl_review.py  tb_review.py
saxoflow_agenticai/config/: model_config.yaml
saxoflow_agenticai/core/: agent_base.py  agent_manager.py  log_manager.py  model_selector.py  prompt_manager.py
saxoflow_agenticai/gateway/: fireworks.py  googleaistudio.py  groq.py  huggingface.py  mistral.py  openai.py  openrouter.py  together.py
saxoflow_agenticai/orchestrator/: agent_orchestrator.py  feedback_coordinator.py
saxoflow_agenticai/prompts/: fpropgen_prompt.txt  fpropreview_prompt.txt  rtlgen_prompt.txt  rtlreview_prompt.txt  tbgen_prompt.txt  tbreview_prompt.txt
