[project]
name = "saxoflow_agenticai"
version = "0.1.0"
description = "AI agent framework for digital design"
authors = [{name = "SaxoFlow Labs", email = "saxoflowlabs@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai",
    "click",
    "python-dotenv",
    "jinja2",
    "requests",
    "pyyaml",
    "fastapi",
    "uvicorn",
    "langchain>=0.3.26",
    "langchain-core>=0.3.26",
    "langchain-community",
    "langchain-openai",
    "langchain-groq",
    "langchain-fireworks",
    "langchain-together",
    "protobuf>=4.25.3,<5",
    "googleapis-common-protos>=1.62.0",
    "google-api-core>=2.17.1",
    "google-generativeai",
    "langchain-google-genai",
    "langchain-mistralai",
    "pydantic>=2.7.4,<3.0.0",
    "tiktoken",
    "huggingface_hub"
    # Remove/adjust as needed below if not using all
    # "fireworks-ai==0.13.1",
    # "mistralai",
    # "together",
    # ...etc
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["saxoflow_agenticai*"]
